--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
           <div class="card" style="border-radius: 1rem;">
             <div class="row g-0">
               <div class="col-md-6 col-lg-5 d-none d-md-block">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                <img src="https://images.pexels.com/photos/7319324/pexels-photo-7319324.jpeg?auto=compress&cs=tinysrgb&w=600"
                   alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
               </div>
               <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -43,8 +43,8 @@
                     </div>
   
                     <a class="small text-muted" href="#!">¿Olvidaste la contraseña?</a>
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">¿No tienes una cuenta?<a href="#!"
-                        style="color: #393f81;">Regristrate Aqui</a></p>
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">¿No tienes una cuenta?<a href="registro.html"
+                        style="color: #393f81;">Registrate Aqui</a></p>
                   </form>
                 </div>
               </div>
